--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
-
 {
-  "name": "NodeTemplate", 
+  "name": "webauth-iii-challenge",
   "version": "1.0.0",
-  "description": "", 
+  "description": "- Authentication.\r - Express Middleware.\r - JSON Web Tokens (JWTs).\r - Hashing Passwords.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/easyas123l1/NodeTemplate.git" 
+    "url": "git+https://github.com/easyas123l1/webauth-iii-challenge.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/easyas123l1/NodeTemplate/issues"  
+    "url": "https://github.com/easyas123l1/webauth-iii-challenge/issues"
   },
-  "homepage": "https://github.com/easyas123l1/NodeTemplate#readme", 
+  "homepage": "https://github.com/easyas123l1/webauth-iii-challenge#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-session-knex": "^1.5.0",
